--- a/não sei.html
+++ b/não sei.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <div class="bg-indigo-950 h-96 w-[220px]">
-        <h1 class='w-3 flex h-12'>
+    <div class="bg-indigo-950 h-96 w-96 flex justify-between items-center">
+        <h1 class='w-3 flex h-12 text-white font-bold'>
             Hello world!
         </h1>
     </div>
